force-app/main/default/objects/Customer_Historical_Spend__c/Customer_Historical_Spend__c.object-meta.xml
<CustomObject>
    <description>Stores Primary Customer Type, Historical Spend and Instrument Credit for each NGN (National Group Number).</description>
    <label>Customer Historical Spend</label>
    <nameField>
        <displayFormat>CHS-{0000000}</displayFormat>
        <label>Customer Historical Spend Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Historical Spend</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>