force-app/main/default/objects/Customer_Historical_Spend__c/fields/Customer_Historic_Spend__c.field-meta.xml
<CustomField>
    <fullName>Customer_Historic_Spend__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Determines what discount tier the customer is placed in for discount guidance. Each account has a consumable tier based on consumable spend over a specific 12 month period at the NGN level and instrument credit tier based on the installed base.</description>
    <inlineHelpText>Determines what discount tier the customer is placed in for discount guidance. Each account has a consumable tier based on consumable spend over a specific 12 month period at the NGN level and instrument credit tier based on the installed base.</inlineHelpText>
    <label>Customer Historic Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>