force-app/main/default/objects/Customer_Historical_Spend__c/fields/Primary_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Type__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Customer type representing the highest consumable spend within a given NGN</description>
    <inlineHelpText>Customer type representing the highest consumable spend within a given NGN</inlineHelpText>
    <label>Primary Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Type</valueSetName>
    </valueSet>
</CustomField>