force-app/main/default/objects/Customer_Historical_Spend__c/fields/Total_Instrument_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Instrument_Credits__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Measurement of customer&apos;s installed base at the NGN level. Calculated by counting instruments that are installed, shipped, and awaiting installation, and multiply by the instrument credit assigned to each instrument model.</description>
    <inlineHelpText>Measurement of customer&apos;s installed base at the NGN level. Calculated by counting instruments that are installed, shipped, and awaiting installation, and multiply by the instrument credit assigned to each instrument model.</inlineHelpText>
    <label>Total Instrument Credits</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>