force-app/main/default/objects/Customer_Historical_Spend__c/fields/Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_From_Date__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>The start date of validity period on customer historical spend. The data is valid for two years.</description>
    <inlineHelpText>The start date of validity period on customer historical spend. The data is valid for two years.</inlineHelpText>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>