force-app/main/default/objects/Customer_Historical_Spend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ERP_ID__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Customer_Historic_Spend__c</columns>
    <columns>Total_Instrument_Credits__c</columns>
    <columns>Primary_Customer_Type__c</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Fiscal_Start_Date__c</columns>
    <columns>Fiscal_End_Date__c</columns>
    <columns>External_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>